--- a/CoinBrowser/CoinBrowser/Storyboards/Base.lproj/Main.storyboard
+++ b/CoinBrowser/CoinBrowser/Storyboards/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="nUw-J0-ZtF" detailTextLabel="VWy-7c-lQx" style="IBUITableViewCellStyleSubtitle" id="JfA-9A-AiD">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="coinCell" textLabel="nUw-J0-ZtF" detailTextLabel="VWy-7c-lQx" style="IBUITableViewCellStyleSubtitle" id="JfA-9A-AiD">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JfA-9A-AiD" id="qfc-SH-SVx">
